# haskell-cgi

./: README.md  haskell-cgi.cabal  hie.yaml
app/: Main.hs
cgi-bin/: hello
